objects/Order__x.object
<CustomObject>
    <externalDataSource>HDMP_QA</externalDataSource>
    <externalName>Order</externalName>
    <fields>
        <fullName>AK_Order_c__c</fullName>
        <externalDeveloperName>AK_Order__c</externalDeveloperName>
        <label>AK Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountId__c</fullName>
        <externalDeveloperName>AccountId</externalDeveloperName>
        <label>Account ID</label>
        <length>18</length>
        <referenceTo>Account__x</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Account_Name_c__c</fullName>
        <externalDeveloperName>Account_Name__c</externalDeveloperName>
        <label>Account Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_c__c</fullName>
        <externalDeveloperName>Account__c</externalDeveloperName>
        <label>Person Account</label>
        <length>18</length>
        <referenceTo>Account__x</referenceTo>
        <relationshipName>Orders2</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>ActivatedById__c</fullName>
        <externalDeveloperName>ActivatedById</externalDeveloperName>
        <label>Activated By ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivatedDate__c</fullName>
        <externalDeveloperName>ActivatedDate</externalDeveloperName>
        <label>Activated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Address_c__c</fullName>
        <externalDeveloperName>Address__c</externalDeveloperName>
        <label>Shipping Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Allocated_Quantity_c__c</fullName>
        <externalDeveloperName>Allocated_Quantity__c</externalDeveloperName>
        <label>Allocated Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BT_Customer_Detail_c__c</fullName>
        <externalDeveloperName>BT_Customer_Detail__c</externalDeveloperName>
        <label>Payment Gateway Customer Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BT_Customer_Legecy_Id_c__c</fullName>
        <externalDeveloperName>BT_Customer_Legecy_Id__c</externalDeveloperName>
        <label>BT Customer Legecy Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BT_Transaction_Id_c__c</fullName>
        <externalDeveloperName>BT_Transaction_Id__c</externalDeveloperName>
        <label>Customer Payment Gateway Transaction Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BT_Transaction_Status_c__c</fullName>
        <externalDeveloperName>BT_Transaction_Status__c</externalDeveloperName>
        <label>Cust Payment Gateway Transaction Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authorized</fullName>
                </value>
                <value>
                    <fullName>Submitted_For_Settlement</fullName>
                </value>
                <value>
                    <fullName>Settlement_Pending</fullName>
                </value>
                <value>
                    <fullName>Settling</fullName>
                </value>
                <value>
                    <fullName>Settled</fullName>
                </value>
                <value>
                    <fullName>Voided</fullName>
                </value>
                <value>
                    <fullName>Processor_Declined</fullName>
                </value>
                <value>
                    <fullName>Gateway_Rejected</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Settlement_Declined</fullName>
                </value>
                <value>
                    <fullName>Authorization_Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillToContactId__c</fullName>
        <externalDeveloperName>BillToContactId</externalDeveloperName>
        <label>Bill To Contact ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingAddress__c</fullName>
        <externalDeveloperName>BillingAddress</externalDeveloperName>
        <label>Billing Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BillingCity__c</fullName>
        <externalDeveloperName>BillingCity</externalDeveloperName>
        <label>Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCountry__c</fullName>
        <externalDeveloperName>BillingCountry</externalDeveloperName>
        <label>Billing Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingEmailAddress__c</fullName>
        <externalDeveloperName>BillingEmailAddress</externalDeveloperName>
        <label>Billing Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BillingGeocodeAccuracy__c</fullName>
        <externalDeveloperName>BillingGeocodeAccuracy</externalDeveloperName>
        <label>Billing Geocode Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>NearAddress</fullName>
                    <label>Near Address</label>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>ExtendedZip</fullName>
                    <label>Extended Zip</label>
                </value>
                <value>
                    <fullName>Zip</fullName>
                </value>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillingLatitude__c</fullName>
        <externalDeveloperName>BillingLatitude</externalDeveloperName>
        <label>Billing Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingLongitude__c</fullName>
        <externalDeveloperName>BillingLongitude</externalDeveloperName>
        <label>Billing Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingPhoneNumber__c</fullName>
        <externalDeveloperName>BillingPhoneNumber</externalDeveloperName>
        <label>Billing Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BillingPostalCode__c</fullName>
        <externalDeveloperName>BillingPostalCode</externalDeveloperName>
        <label>Billing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingState__c</fullName>
        <externalDeveloperName>BillingState</externalDeveloperName>
        <label>Billing State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStreet__c</fullName>
        <externalDeveloperName>BillingStreet</externalDeveloperName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BillingZip_c__c</fullName>
        <externalDeveloperName>BillingZip__c</externalDeveloperName>
        <label>BillingZip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Customer_Name_c__c</fullName>
        <externalDeveloperName>Billing_Customer_Name__c</externalDeveloperName>
        <label>Billing Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Email_Address_User_Email_c__c</fullName>
        <externalDeveloperName>Billing_Email_Address_User_Email__c</externalDeveloperName>
        <label>Billing Email Address/User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CC_Last4_c__c</fullName>
        <externalDeveloperName>CC_Last4__c</externalDeveloperName>
        <label>Credit Card Last Four Digit</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cart_Shipping_City_c__c</fullName>
        <externalDeveloperName>Cart_Shipping_City__c</externalDeveloperName>
        <label>Cart Shipping City</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cart_Shipping_Country_c__c</fullName>
        <externalDeveloperName>Cart_Shipping_Country__c</externalDeveloperName>
        <label>Cart Shipping Country</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cart_Shipping_Customer_Name_c__c</fullName>
        <externalDeveloperName>Cart_Shipping_Customer_Name__c</externalDeveloperName>
        <label>Cart Shipping Customer Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cart_Shipping_Phone_c__c</fullName>
        <externalDeveloperName>Cart_Shipping_Phone__c</externalDeveloperName>
        <label>Shipping Phone Number</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cart_Shipping_Postal_Code_c__c</fullName>
        <externalDeveloperName>Cart_Shipping_Postal_Code__c</externalDeveloperName>
        <label>Cart Shipping Postal Code</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cart_Shipping_State_c__c</fullName>
        <externalDeveloperName>Cart_Shipping_State__c</externalDeveloperName>
        <label>Cart Shipping State</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cart_Shipping_Street_c__c</fullName>
        <externalDeveloperName>Cart_Shipping_Street__c</externalDeveloperName>
        <label>Cart Shipping Street</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Chkout_Carrier_Code_c__c</fullName>
        <externalDeveloperName>Chkout_Carrier_Code__c</externalDeveloperName>
        <label>Checkout Carrier Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chkout_Carrier_Name_c__c</fullName>
        <externalDeveloperName>Chkout_Carrier_Name__c</externalDeveloperName>
        <label>Checkout Carrier Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chkout_Shipping_Speed_c__c</fullName>
        <externalDeveloperName>Chkout_Shipping_Speed__c</externalDeveloperName>
        <label>Checkout Shipping Speed</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyAuthorizedById__c</fullName>
        <externalDeveloperName>CompanyAuthorizedById</externalDeveloperName>
        <label>Company Authorized By ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyAuthorizedDate__c</fullName>
        <externalDeveloperName>CompanyAuthorizedDate</externalDeveloperName>
        <label>Company Authorized Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractId__c</fullName>
        <externalDeveloperName>ContractId</externalDeveloperName>
        <label>Contract ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Grand_Total_Amount_c__c</fullName>
        <externalDeveloperName>Current_Grand_Total_Amount__c</externalDeveloperName>
        <label>Total Current with Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Installation_Tax_c__c</fullName>
        <externalDeveloperName>Current_Installation_Tax__c</externalDeveloperName>
        <label>Current Installation Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Quantity_c__c</fullName>
        <externalDeveloperName>Current_Quantity__c</externalDeveloperName>
        <label>Current Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Return_Amount_c__c</fullName>
        <externalDeveloperName>Current_Return_Amount__c</externalDeveloperName>
        <label>Current Return Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Return_Tax_c__c</fullName>
        <externalDeveloperName>Current_Return_Tax__c</externalDeveloperName>
        <label>Current Return Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Shipping_Tax_c__c</fullName>
        <externalDeveloperName>Current_Shipping_Tax__c</externalDeveloperName>
        <label>Current Shipping Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CustomTotal_c__c</fullName>
        <externalDeveloperName>CustomTotal__c</externalDeveloperName>
        <label>CustomTotal</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerAuthorizedById__c</fullName>
        <externalDeveloperName>CustomerAuthorizedById</externalDeveloperName>
        <label>Customer Authorized By ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerAuthorizedDate__c</fullName>
        <externalDeveloperName>CustomerAuthorizedDate</externalDeveloperName>
        <label>Customer Authorized Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CustomerOrderStatus_c__c</fullName>
        <externalDeveloperName>CustomerOrderStatus__c</externalDeveloperName>
        <label>CustomerOrderStatus</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <externalDeveloperName>Customer_Name__c</externalDeveloperName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name_c__c</fullName>
        <externalDeveloperName>Customer_Name__c</externalDeveloperName>
        <label>Billing Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Notes_c__c</fullName>
        <externalDeveloperName>Customer_Notes__c</externalDeveloperName>
        <label>Customer Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Preferred_Speed_c__c</fullName>
        <externalDeveloperName>Customer_Preferred_Speed__c</externalDeveloperName>
        <label>Customer Preferred Speed</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Preferred_Speeds_c__c</fullName>
        <externalDeveloperName>Customer_Preferred_Speeds__c</externalDeveloperName>
        <label>Honda Shipping Speed</label>
        <length>1300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Account_c__c</fullName>
        <externalDeveloperName>Dealer_Account__c</externalDeveloperName>
        <label>Dealer Account</label>
        <length>18</length>
        <referenceTo>Account__x</referenceTo>
        <relationshipName>Orders3</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Email_c__c</fullName>
        <externalDeveloperName>Dealer_Email__c</externalDeveloperName>
        <label>Dealer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealer_Notes_c__c</fullName>
        <externalDeveloperName>Dealer_Notes__c</externalDeveloperName>
        <label>Dealer Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Number_c__c</fullName>
        <externalDeveloperName>Dealer_Number__c</externalDeveloperName>
        <label>Dealer Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Shipping_Speed_c__c</fullName>
        <externalDeveloperName>Dealer_Shipping_Speed__c</externalDeveloperName>
        <label>Dealer Shipping Speed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Expedited</fullName>
                </value>
                <value>
                    <fullName>Express</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Type_c__c</fullName>
        <externalDeveloperName>Delivery_Type__c</externalDeveloperName>
        <label>Delivery Type</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Types_c__c</fullName>
        <externalDeveloperName>Delivery_Types__c</externalDeveloperName>
        <label>Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Install At Dealer</fullName>
                </value>
                <value>
                    <fullName>Pick Up At Dealer</fullName>
                </value>
                <value>
                    <fullName>Ship to Me</fullName>
                </value>
                <value>
                    <fullName>DirectShip</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <externalDeveloperName>EffectiveDate</externalDeveloperName>
        <label>Order Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Username_c__c</fullName>
        <externalDeveloperName>Email_Username__c</externalDeveloperName>
        <label>Email Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_c__c</fullName>
        <externalDeveloperName>Email__c</externalDeveloperName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <externalDeveloperName>EndDate</externalDeveloperName>
        <label>Order End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_account_POID_c__c</fullName>
        <externalDeveloperName>External_account_POID__c</externalDeveloperName>
        <label>External_account_POID</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FormattedEffectiveDate_c__c</fullName>
        <externalDeveloperName>FormattedEffectiveDate__c</externalDeveloperName>
        <label>FormattedEffectiveDate</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GrandTotalAmount__c</fullName>
        <externalDeveloperName>GrandTotalAmount</externalDeveloperName>
        <label>Total with Tax</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrandTotalAmount_c__c</fullName>
        <externalDeveloperName>GrandTotalAmount__c</externalDeveloperName>
        <label>Total Original with Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPD_RLN_c__c</fullName>
        <externalDeveloperName>HPD_RLN__c</externalDeveloperName>
        <label>HPD Racing Line Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Refund_c__c</fullName>
        <externalDeveloperName>Install_Refund__c</externalDeveloperName>
        <label>Install Refund</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsError_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsError__c</externalDeveloperName>
        <label>IsError</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsEvseOrder_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsEvseOrder__c</externalDeveloperName>
        <label>IsEvseOrder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPaymentReproccessing_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsPaymentReproccessing__c</externalDeveloperName>
        <label>IsPaymentReproccessing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsReductionOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsReductionOrder</externalDeveloperName>
        <label>Reduction Order</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Payment_Processed_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Is_Payment_Processed__c</externalDeveloperName>
        <label>Is Payment Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Shipping_Returned_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Is_Shipping_Returned__c</externalDeveloperName>
        <label>Is Shipping Returned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Posted_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Lead_Posted__c</externalDeveloperName>
        <label>Lead_Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Order Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_c__c</fullName>
        <externalDeveloperName>Notes__c</externalDeveloperName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ORDER_AMOUNT_from_cart_c__c</fullName>
        <externalDeveloperName>ORDER_AMOUNT_from_cart__c</externalDeveloperName>
        <label>Total Original Product Amount</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <externalDeveloperName>OpportunityId</externalDeveloperName>
        <label>Opportunity ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderItemSKU_c__c</fullName>
        <externalDeveloperName>OrderItemSKU__c</externalDeveloperName>
        <label>OrderItemSKU</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <externalDeveloperName>OrderNumber</externalDeveloperName>
        <label>Order Number</label>
        <length>30</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderReferenceNumber__c</fullName>
        <externalDeveloperName>OrderReferenceNumber</externalDeveloperName>
        <label>Order Reference Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Product_c__c</fullName>
        <externalDeveloperName>Order_Product__c</externalDeveloperName>
        <label>Order Product</label>
        <length>18</length>
        <referenceTo>OrderItem__x</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>OrderedDate__c</fullName>
        <externalDeveloperName>OrderedDate</externalDeveloperName>
        <label>Ordered Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OriginalOrderId__c</fullName>
        <externalDeveloperName>OriginalOrderId</externalDeveloperName>
        <label>Order ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <referenceTo>Order__x</referenceTo>
        <relationshipName>Orders2</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Original_Shipping_Amount_c__c</fullName>
        <externalDeveloperName>Original_Shipping_Amount__c</externalDeveloperName>
        <label>Original Shipping Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Carrier_c__c</fullName>
        <externalDeveloperName>Other_Carrier__c</externalDeveloperName>
        <label>Carrier Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Gateway_c__c</fullName>
        <externalDeveloperName>Payment_Gateway__c</externalDeveloperName>
        <label>Payment Gateway</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Braintree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Method_Token_c__c</fullName>
        <externalDeveloperName>Payment_Method_Token__c</externalDeveloperName>
        <label>Payment Method Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type_c__c</fullName>
        <externalDeveloperName>Payment_Type__c</externalDeveloperName>
        <label>Payment Method Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>Mastercard</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>Amex</fullName>
                </value>
                <value>
                    <fullName>PayPal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_No_c__c</fullName>
        <externalDeveloperName>Phone_No__c</externalDeveloperName>
        <label>Phone No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PoDate__c</fullName>
        <externalDeveloperName>PoDate</externalDeveloperName>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PoNumber__c</fullName>
        <externalDeveloperName>PoNumber</externalDeveloperName>
        <label>PO Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricebook2Id__c</fullName>
        <externalDeveloperName>Pricebook2Id</externalDeveloperName>
        <label>Price Book ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Division_c__c</fullName>
        <externalDeveloperName>Product_Division__c</externalDeveloperName>
        <label>Product Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <label>Honda Auto</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>Acura Auto</label>
                </value>
                <value>
                    <fullName>M</fullName>
                    <label>Motorcycle</label>
                </value>
                <value>
                    <fullName>P</fullName>
                    <label>Powerequipment</label>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Subdivision_c__c</fullName>
        <externalDeveloperName>Product_Subdivision__c</externalDeveloperName>
        <label>Product Subdivision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Honda</fullName>
                </value>
                <value>
                    <fullName>Acura</fullName>
                </value>
                <value>
                    <fullName>Motorcycle/Powersports</fullName>
                </value>
                <value>
                    <fullName>Powerequipment</fullName>
                </value>
                <value>
                    <fullName>Marine</fullName>
                </value>
                <value>
                    <fullName>Engine</fullName>
                </value>
                <value>
                    <fullName>Hrc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity_c__c</fullName>
        <externalDeveloperName>Quantity__c</externalDeveloperName>
        <label>Original Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RelatedOrderId__c</fullName>
        <externalDeveloperName>RelatedOrderId</externalDeveloperName>
        <label>Order ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <referenceTo>Order__x</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Released_Quantity_c__c</fullName>
        <externalDeveloperName>Released_Quantity__c</externalDeveloperName>
        <label>Released Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>